# intent-service

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  intents.csv  pyproject.toml  pytest.ini  requirements.txt  test_data.py  training_request.json
.github/workflows/: publish.yml
src/: __init__.py  cli.py  run_service.py  test_cli.py  test_endpoints.py  test_ml.py
src/api/: __init__.py  endpoints.py
src/api/templates/: index.html
src/ml/: __init__.py  mlflow.py  train.py
src/schema/: __init__.py  schema.py
tests/: test_endpoints.py  test_ml.py
