[project]
name = "intent-service"
version = "0.1.0"
description = "Intent classification service"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.68.0,<1.0.0",
    "pydantic>=2.4.2,<3.0.0",
    "mlflow==2.9.2",
    "polars>=0.20.0",
    "uvicorn>=0.15.0",
    "requests>=2.31.0",
    "python-multipart>=0.0.6",
    "httpx>=0.27.2",
    "torch>=2.5.1",
    "transformers>=4.46.3"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
